// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bigint-key.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = {1n: ""}
a = {1n() {}}
a = {get 1n() {}}

=====================================output=====================================
a = { 1n: "" };
a = { 1n() {} };
a = { get 1n() {} };

================================================================================
`;

exports[`escape-sequence-key.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// #6235
const a = {
  '\\u2139': 'why "\\\\u2139" is converted to "i"?',
};

const b = {
  "\\x66\\x69\\x73\\x6b\\x65\\x72": "\\x66\\x69\\x73\\x6b\\x65\\x72",
};

=====================================output=====================================
// #6235
const a = {
  "\\u2139": 'why "\\\\u2139" is converted to "i"?',
};

const b = {
  "\\x66\\x69\\x73\\x6b\\x65\\x72": "\\x66\\x69\\x73\\x6b\\x65\\x72",
};

================================================================================
`;

exports[`expand.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const Component1 = ({ props }) => (
  <Text>Test</Text>
);

const Component2 = ({
  props
}) => (
  <Text>Test</Text>
);

=====================================output=====================================
const Component1 = ({ props }) => <Text>Test</Text>;

const Component2 = ({ props }) => <Text>Test</Text>;

================================================================================
`;

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
() => ({}\`\`);
({})\`\`;
a = () => ({}).x;
({} && a, b);
({}::b, 0);
({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
({}(), 0);
({} = 0);
(({} = 0), 1);

const a1 = {
  someKey:
    (shortName, shortName)
};

const a2 = {
  someKey:
    (longLongLongLongLongLongLongLongLongLongLongLongLongLongName, shortName)
};

const a3 = {
  someKey:
    (longLongLongLongLongLongLongLongLongLongLongLongLongLongName, longLongLongLongLongLongLongLongLongLongLongLongLongLongName, longLongLongLongLongLongLongLongLongLongLongLongLongLongName)
};

=====================================output=====================================
() => ({})\`\`;
({})\`\`;
a = () => ({}).x;
(({}) && a, b);
(({})::b, 0);
(({})::b()\`\`[""].c++ && 0 ? 0 : 0, 0);
(({})(), 0);
({} = 0);
(({} = 0), 1);

const a1 = {
  someKey: (shortName, shortName),
};

const a2 = {
  someKey:
    (longLongLongLongLongLongLongLongLongLongLongLongLongLongName, shortName),
};

const a3 = {
  someKey:
    (longLongLongLongLongLongLongLongLongLongLongLongLongLongName,
    longLongLongLongLongLongLongLongLongLongLongLongLongLongName,
    longLongLongLongLongLongLongLongLongLongLongLongLongLongName),
};

================================================================================
`;

exports[`expression.js format[acorn] 1`] = `
"Unexpected token (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: Unexpected token (5:3)"
`;

exports[`expression.js format[espree] 1`] = `
"Unexpected token : (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: Unexpected token :"
`;

exports[`expression.js format[flow] 1`] = `
"Unexpected token \`:\`, expected a type (5:5)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |     ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: Unexpected token \`:\`, expected a type (5:4)"
`;

exports[`expression.js format[hermes] 1`] = `
"unexpected token in type annotation (5:5)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |     ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: unexpected token in type annotation (5:4)
({}::b, 0);
    ^"
`;

exports[`expression.js format[meriyah] 1`] = `
"Expected ')' (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: [5:3-5:4]: Expected ')'"
`;

exports[`expression.js format[oxc] 1`] = `
"Expected \`,\` or \`)\` but found \`:\` (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);"
`;

exports[`expression.js format[oxc-ts] 1`] = `
"Expected \`,\` or \`)\` but found \`:\` (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);"
`;

exports[`expression.js format[typescript] 1`] = `
"')' expected. (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);
Cause: ')' expected."
`;

exports[`expression.js format[yuku] 1`] = `
"Expected ',' or ')' in parenthesized expression, but found ':' (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);"
`;

exports[`expression.js format[yuku-ts] 1`] = `
"Expected ',' or ')' in parenthesized expression, but found ':' (5:4)
  3 | a = () => ({}).x;
  4 | ({} && a, b);
> 5 | ({}::b, 0);
    |    ^
  6 | ({}::b()\`\`[''].c++ && 0 ? 0 : 0, 0);
  7 | ({}(), 0);
  8 | ({} = 0);"
`;

exports[`getter-setter.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
({ set x(foo) {} });
({ get x() { return 1 } });
({ set x(a) {} });
({ get x() {} });

=====================================output=====================================
({ set x(foo) {} });
({
  get x() {
    return 1;
  },
});
({ set x(a) {} });
({ get x() {} });

================================================================================
`;

exports[`method.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = { f() {} }

=====================================output=====================================
a = { f() {} };

================================================================================
`;

exports[`range.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
group(
  concat([
    "(",
    indent(
      options.tabWidth,
      concat([line, join(concat([",", line]), printed)])
    ),
    options.trailingComma ? "," : "",
    line,
    ")"
  ]),
  {shouldBreak: true}
)

=====================================output=====================================
group(
  concat([
    "(",
    indent(
      options.tabWidth,
      concat([line, join(concat([",", line]), printed)]),
    ),
    options.trailingComma ? "," : "",
    line,
    ")",
  ]),
  { shouldBreak: true },
);

================================================================================
`;

exports[`right-break.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const blablah =
  "aldkfkladfskladklsfkladklfkaldfadfkdaf" +
  "adlfasdklfkldsklfakldsfkladsfkadsfladsfa" +
  "dflkadfkladsfklkadlfkladlfkadklfjadlfdfdaf";

const k = {
  blablah: "aldkfkladfskladklsfkladklfkaldfadfkdaf" +
    "adlfasdklfkldsklfakldsfkladsfkadsfladsfa" +
    "dflkadfkladsfklkadlfkladlfkadklfjadlfdfdaf"
};

somethingThatsAReallyLongPropName =
  this.props.cardType === AwesomizerCardEnum.SEEFIRST;

const o = {
  somethingThatsAReallyLongPropName:
    this.props.cardType === AwesomizerCardEnum.SEEFIRST,
};

=====================================output=====================================
const blablah =
  "aldkfkladfskladklsfkladklfkaldfadfkdaf" +
  "adlfasdklfkldsklfakldsfkladsfkadsfladsfa" +
  "dflkadfkladsfklkadlfkladlfkadklfjadlfdfdaf";

const k = {
  blablah:
    "aldkfkladfskladklsfkladklfkaldfadfkdaf" +
    "adlfasdklfkldsklfakldsfkladsfkadsfladsfa" +
    "dflkadfkladsfklkadlfkladlfkadklfjadlfdfdaf",
};

somethingThatsAReallyLongPropName =
  this.props.cardType === AwesomizerCardEnum.SEEFIRST;

const o = {
  somethingThatsAReallyLongPropName:
    this.props.cardType === AwesomizerCardEnum.SEEFIRST,
};

================================================================================
`;
